--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </ul>
             </header>
             </div>
+            <div></div>
             <div id="main-doc">
                 <section class="main-section"  id="Introduction">
                     <header class="header">Introduction</header>
