--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+                <link rel="icon" href="favicon.png">
+
         <title>Documentation Page</title>
         <link rel="stylesheet" href="styles.css">
     </head>
